# godot_oculus_mobile

./: .clang-format  .directory  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  SConstruct  VERSION.md  build.gradle  build.gradle.kts  config.gradle  config.gradle.kts  settings.gradle  settings.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: Dependencies.kt
demo/: Main.gd  Main.tscn  Milkyway.png.import  build.gradle  export_presets.cfg  icon.png.import  left-controller.dae.import  project.godot  right-controller.dae  right-controller.dae.import
demo/addons/example_scenes/: ARVROriginWithInitAndMovement.tscn  touch_controller.dae.import
demo/addons/godot_gearvr/: godot_gearvr.gdnlib
demo/addons/godot_ovr/: godot_ovr.gdnlib
demo/addons/godot_ovrmobile/: OvrRuntimeConfig.gdns
demo/addons/godot_ovrmobile/example_scenes/: ARVROriginWithHandTracking.gd  ARVROriginWithInitAndMovement.gd  ARVROriginWithInitAndMovement.tscn  arvr_origin.gd  arvr_origin.tscn  left_hand_model.glb.import  oculus_hand_tracker.gd  right_hand_model.glb.import  touch_controller.dae.import
demo/godot/: Main.gd
demo/godot/.import/: right_hand_model.glb-5462a0aefd8dcabe7f35f5f18c012b18.md5  right_hand_model.glb-5462a0aefd8dcabe7f35f5f18c012b18.scn  touch_controller.dae-173498c575c00b5da5457c9fbea54cbe.scn
demo/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: ARVRInterface.cpp  ARVRInterface.h  Android.mk  Application.mk  GodotCalls.cpp  GodotCalls.h  godot_gearvr.cpp  godot_gearvr.h
plugin/: CMakeLists.txt  build.gradle  build.gradle.kts  gdovrmobile.gdap  ovrmobile.gdap
plugin/src/main/: AndroidManifest.xml
plugin/src/main/assets/addons/godot_ovrmobile/: OvrVrApiTypes.gd  godot_ovrmobile.gdnlib
plugin/src/main/cpp/: CMakeLists.txt  arvr_interface.h  common.cpp  common.h  framebuffer.cpp  framebuffer.h  godot_calls.h  godot_ovrmobile.cpp  godot_ovrmobile.h  ovr_mobile_controller.cpp  ovr_mobile_controller.h  ovr_mobile_session.cpp  ovr_mobile_session.h
plugin/src/main/cpp/api/: api_common.h  ovr_display.cpp  ovr_display.h  ovr_display_refresh_rate.cpp  ovr_display_refresh_rate.h  ovr_guardian_system.cpp  ovr_guardian_system.h  ovr_init_config.cpp  ovr_init_config.h  ovr_input.cpp  ovr_input.h  ovr_performance.cpp  ovr_performance.h  ovr_system.cpp  ovr_system.h  ovr_tracking_transform.cpp  ovr_tracking_transform.h  ovr_utilities.cpp  ovr_utilities.h
plugin/src/main/cpp/config/: config_common.cpp  config_common.h  ovr_display_refresh_rate.cpp  ovr_guardian_system.cpp  ovr_performance.cpp  ovr_performance.h  ovr_tracking_transform.cpp  ovr_tracking_transform.h
plugin/src/main/cpp/gdnative/: arvr_interface.cpp  arvr_interface.h  godot_ovrmobile.cpp  godot_ovrmobile.h  os.cpp  os.h
plugin/src/main/cpp/gdnative/nativescript/: nativescript_common.cpp  nativescript_common.h  ovr_display_refresh_rate_ns.cpp  ovr_display_refresh_rate_ns.h  ovr_guardian_system_ns.cpp  ovr_guardian_system_ns.h  ovr_hand_tracking.cpp  ovr_hand_tracking_ns.cpp  ovr_hand_tracking_ns.h  ovr_init_config_ns.cpp  ovr_init_config_ns.h  ovr_input_ns.cpp  ovr_input_ns.h  ovr_performance_ns.cpp  ovr_performance_ns.h  ovr_tracking_transform_ns.cpp  ovr_tracking_transform_ns.h  ovr_utilities_ns.cpp  ovr_utilities_ns.h  ovr_vr_api_proxy.h  ovr_vr_api_proxy_ns.cpp  ovr_vr_api_proxy_ns.h
plugin/src/main/cpp/jni/: jni_common.cpp  jni_common.h  ovr_display_jni.cpp  ovr_display_refresh_rate_jni.cpp  ovr_guardian_system_jni.cpp  ovr_init_config_jni.cpp  ovr_input_jni.cpp  ovr_mobile_plugin_jni.cpp  ovr_mobile_plugin_wrapper.cpp  ovr_mobile_plugin_wrapper.h  ovr_performance_jni.cpp  ovr_system_jni.cpp  ovr_tracking_transform_jni.cpp  ovr_utilities_jni.cpp
plugin/src/main/java/org/godotengine/plugin/vr/oculus/mobile/: OculusMobileGodotPlugin.kt  OvrMobileGodotPlugin.kt  OvrMobilePlugin.kt
plugin/src/main/java/org/godotengine/plugin/vr/oculus/mobile/api/: OvrDisplay.kt  OvrDisplayRefreshRate.kt  OvrGuardianSystem.kt  OvrInitConfig.kt  OvrInput.kt  OvrPerformance.kt  OvrSystem.kt  OvrTrackingTransform.kt  OvrUtilities.kt
plugin/src/main/java/org/godotengine/plugin/vr/oculus/mobile/platform/: OvrPlatform.kt
samples/demo/: build.gradle
samples/demo/godot/: .clang-format  .gitignore  CubeTree.tscn  export_presets.cfg  project.godot
samples/demo/godot/.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  left_hand_model.glb-0a7976d29b950727e5aeb313e66702cf.md5  left_hand_model.glb-0a7976d29b950727e5aeb313e66702cf.scn  touch_controller.dae-173498c575c00b5da5457c9fbea54cbe.md5
samples/demo/godot/addons/godot_ovrmobile/example_scenes/: arvr_origin.gd  arvr_origin.tscn  left_hand_model.glb.import  oculus_hand_tracker.gd  oculus_tracker.gd  right_hand_model.glb.import  touch_controller.dae.import
samples/demo/src/main/: AndroidManifest.xml
samples/demo/src/main/java/org/godotengine/plugin/vr/oculus/mobile/demo/: MainActivity.kt
src/: ARVRInterface.cpp  ARVRInterface.h  GodotCalls.cpp  GodotCalls.h  OS.cpp  OS.h  arvr_interface.cpp  common.cpp  common.h  framebuffer.cpp  framebuffer.h  godot_calls.cpp  godot_ovr.cpp  godot_ovr.h  godot_ovrmobile.cpp  godot_ovrmobile.h  ovrCommon.cpp  ovrCommon.h  ovrFramebuffer.cpp  ovrFramebuffer.h  ovr_mobile_controller.cpp  ovr_mobile_controller.h  ovr_mobile_session.cpp  ovr_mobile_session.h
src/config/: config_common.cpp  config_common.h  ovr_display_refresh_rate.h  ovr_guardian_system.cpp  ovr_guardian_system.h  ovr_hand_tracking.cpp  ovr_hand_tracking.h  ovr_init_config.cpp  ovr_init_config.h  ovr_performance.h  ovr_runtime_config.cpp  ovr_runtime_config.h  ovr_tracking_transform.cpp  ovr_tracking_transform.h  ovr_utilities.cpp  ovr_utilities.h  ovr_vr_api_proxy.cpp  ovr_vr_api_proxy.h
travis/: clang-format.sh
